2015-04-10  Will Trimble

   * tests/test_script_arguments.py: added a test to check for the empty file
   warning when checking if a file exists

2015-04-10  Jacob Fenton  <bocajnotnef@gmail.com>

   * scripts/test-{scripts.py}: added test for check_file_writable using 
   load_into_counting

2015-04-10  Phillip Garland  <pgarland@gmail.com>

   * khmer/file.py (check_file_writable): new function to check writability
   * scripts/load-into-counting.py (main): early check to see if output is
   writable

2015-04-07  Michael R. Crusoe  <mcrusoe@msu.edu>

    * README.rst: add a ReadTheDocs badge

2015-04-06  Michael R. Crusoe  <mcrusoe@msu.edu>

   * jenkins-build.sh: updated OS X warning flag to quiet the build a bit

2015-04-06  Michael R. Crusoe  <mcrusoe@msu.edu>

   * Makefile: added 'convert-release-notes' target for MD->RST conversion
   * doc/{,release-notes}/index.rst: include release notes in documentation
   * doc/release-notes/*.rst: added pandoc converted versions of release notes
   * jenkins-build.sh: use the Sphinx method to install doc dependencies

2015-04-05  Michael R. Crusoe  <mcrusoe@msu.edu>

   * setup.py: use the release version of screed 0.8

2015-04-05  Michael R. Crusoe  <mcrusoe@msu.edu>

   * doc/*/*.txt: all documentation sources have been renamed to use the rst
   extension to indicate that they are reStructuredText files. This enables
   use of rich text editors on GitHub and elsewhere.
   * doc/conf.py: update Sphinx configuration to reflect this change
   * doc/requirements.txt: added hint to install version 3.4.1 of Setuptools;
   this file is used by ReadTheDocs only.

2015-04-05  Michael R. Crusoe  <mcrusoe@msu.edu>

   * ChangeLog, lib/read_aligner.cc, sandbox/sweep-reads.py: fixed spelling
   errors.

2015-04-05  Kevin Murray  <spam@kdmurray.id.au>

   * lib/read_parsers.{cc,hh}: Work around an issue (#884) in SeqAn 1.4.x
   handling of truncated sequence files. Also revamp exceptions