@@ -1,3 +1,8 @@
+2015-04-13  Scott Sievert <sieve121@umn.edu>
+
+   * changed "doc/LICENSE.txt" to "LICENSE" in tests/*, scripts/*, lib/*,
+   sandbox/*, khmer/*
+
 2015-04-10  Will Trimble
 
    * tests/test_script_arguments.py: added a test to check for the empty file
